feat: pricing and logo

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,8 +9,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ffffff;
+    --foreground: #171717;
   }
 }
 
@@ -18,6 +18,7 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  scroll-behavior: smooth;
 }
 
 @layer utilities {
@@ -91,7 +92,6 @@ body {
   }
 }
 
-
 @keyframes typography {
   0% {
     opacity: 0;
@@ -114,7 +114,8 @@ body {
 
 /* Bounce animation for Scroll Down */
 @keyframes bounce {
-  0%, 100% {
+  0%,
+  100% {
     transform: translateY(0);
   }
   50% {
